frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: backend

  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    # 사용하는 네트워크 프로토콜
    - protocol: TCP
      #서비스가 노출트는 포트
      port: 80
      # pod가 노출하는 포트이자 서비스가 target하는 포트
      targetPort: 80
